--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.4.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
