--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.4.1",
     "react-hook-form": "^7.52.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.24.1",
