--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.67.3",
+    "@tanstack/react-query-devtools": "^5.67.3",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -20,7 +22,6 @@
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.4.1",
     "react-hook-form": "^7.52.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
@@ -43,6 +44,6 @@
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^6.2.1"
   }
 }
