--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "qrcode.react": "^4.2.0",
+    "radix-ui": "^1.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.4.1",
