--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss": "^8.4.39",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
     "vite": "^6.3.4"
   }
